--- a/src/scss/components/_press.scss
+++ b/src/scss/components/_press.scss
@@ -26,6 +26,7 @@
   }
   @include respond(phone-port) {
     width: 100%;
+    margin-bottom: 8rem;
   }
 
   &__logos-container {
@@ -36,7 +37,9 @@
       margin: 2rem 0 1rem 0;
     }
     @include respond(phone-port) {
-      gap: 2rem;
+      @supports (gap: 1rem) {
+        gap: 2rem;
+      }
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
@@ -59,7 +62,7 @@
       height: 2rem;
     }
     @include respond(phone-port) {
-      margin-right: 0;
+      margin-bottom: 2rem;
     }
   }
 
