--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -62,6 +62,7 @@
     @include respond(phone-port) {
       display: flex;
       flex-direction: column;
+      margin-right: 0;
     }
   }
 
@@ -105,6 +106,14 @@
     &:hover {
       transform: scale(1.3);
       cursor: pointer;
+    }
+  }
+}
+
+@media not all and (min-resolution: 0.001dpcm) {
+  @supports (-webkit-appearance: none) {
+    .footer__social-icon {
+      margin-right: 2rem;
     }
   }
 }
