--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -62,6 +62,7 @@
     }
     @include respond(phone-port) {
       width: 80%;
+      margin-bottom: 5rem;
     }
   }
 
